--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
         <h1>
             Teste Github
         </h1>
+        <h2>
+            Teste 2
+        </h2>
     </div>
 </body>
 </html>
